--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body>
     <head>
       <title>TRU House of FADES</title>
+      <link rel="stylesheet" href="style.css">
     </head>
       
   <ul>
