--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 </div>
 
 <footer>
-<p>TRU House of Fades All Rights Reserved</p>
+<p>Copyright &copy <script>document.write(new date().getFullYear())</script>, The BOS</p>
+  <p>TRU House of Fades All Rights Reserved</p>
 <p>Missouri Avenue, Saint Robert MO</p>
 </footer>
 
